spaces between paragraphs in flatpages. fixed some other spacing issues

--- a/pagespace/static/css/flatpage.css
+++ b/pagespace/static/css/flatpage.css
@@ -1,3 +1,3 @@
-#content {
-    padding:10px;
+#content p {
+    margin:5px 0;
 }
